# pair-hardware-sdk

./: .dockerignore  .gitignore  README.md  hardware_sdk.repos
docker/: build_humble_image.sh  run_humble.sh  run_provider.sh
docker/humble/: Dockerfile  clone_and_build.sh  entrypoint.sh
docs/: argos-provider-bridge.md  bringup-notes.md
scripts/: calibrate_charuco_fisheye.py  check_bringup.sh
src/argos_provider_bridge/: README.md  package.xml  setup.cfg  setup.py
src/argos_provider_bridge/argos_provider_bridge/: __init__.py  hardware_provider_bridge.py  puffle_go2_provider.py
src/argos_provider_bridge/argos_provider_bridge/core/: __init__.py  keyspace.py  messages.py  zenoh_provider.py
src/argos_provider_bridge/config/: cody_go2.yaml  puffle_go2.yaml  puffle_go2_provider.yaml  puffle_go2_rect_arducam.yaml
src/argos_provider_bridge/launch/: camera_provider_bridge.launch.py  hardware_provider_bridge.launch.py  puffle_go2_provider.launch.py
src/argos_provider_bridge/resource/: argos_provider_bridge
src/hardware_bringup/: CMakeLists.txt  package.xml
src/hardware_bringup/config/: arducam_b0202_1280x720.yaml  hesai.yaml  static_transforms.yaml
src/hardware_bringup/launch/: all_sensors.launch.py  arducam_v4l2.launch.py  hesai.launch.py  realsense.launch.py  rplidar.launch.py
src/hardware_bringup/scripts/: arducam_fisheye_rectifier.py
