<?xml version="1.0"?>
<package format="3">
  <name>hardware_bringup</name>
  <version>0.1.0</version>
  <description>Unified ROS 2 bringup for RealSense, Arducam, RPLIDAR, and Hesai sensors.</description>
  <maintainer email="you@example.com">Hardware SDK Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
